本日の進捗コミット

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,5 +12,6 @@
 	</head>
 	<body>
 		<h1>私のAstroサイト</h1>
+		<p>進捗は<a href="https://docs.astro.build/ja/tutorial/1-setup/5/">サイトをウェブにデプロイする</a>まで。続きはここから</p>
 	</body>
 </html>
