--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -8,13 +8,13 @@
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Ju5momのAstro学習</title>
+		<title>Ju5momのAstro | About</title>
 	</head>
 	<body>
-		<a href="/">ホーム</a>
+    <a href="/">ホーム</a>
     <a href="/about">About</a>
-		<a href="/blog">Blog</a>
-		<h1>私のAstroサイト</h1>
-		<p>進捗は<a href="https://docs.astro.build/ja/tutorial/2-pages/1/">ついに複数ページをNetlifyで公開</a>まで。続きはここから</p>
+    <a href="/blog">Blog</a>
+		<h1>About</h1>
+		<p>Astroについて学ぶサイトです。<br>なんとNetlifyでホスティングしています。ホスティングサービスというものです。</p>
 	</body>
 </html>
