map関数テンプレート式で使う学習

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,7 +15,7 @@ const pageTitle = "Ju5momのAstro学習";
     <a href="/about">About</a>
 		<a href="/blog">Blog</a>
 		<h1>{pageTitle}</h1>
-		<p><a href="https://docs.astro.build/ja/tutorial/2-pages/2/">初めてのMarkdownによるブログ記事</a>　続きはここから</p>
+		<p><a href="https://docs.astro.build/ja/tutorial/2-pages/5/">サイト全体にスタイルを追加する</a>　続きはここから</p>
 		<h2>memo</h2>
 		<ul>
 			<li>Astroのテンプレート構文はJSX構文に似ています。HTMLでスクリプトを使用する方法がわからない場合は、JSXでのやり方を検索するのが良い出発点になるでしょう！</li>
