--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -14,7 +14,6 @@ const finished = false;
 const goal = 3;
 
 ---
-
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
@@ -22,6 +21,17 @@ const goal = 3;
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{pageTitle}</title>
+		<style>
+			h1 {
+				color: purple;
+				font-size: 4rem;
+			}
+
+			.skill {
+				color: green;
+				font-weight: bold;
+			}
+		</style>
 	</head>
 	<body>
     <a href="/">ホーム</a>
@@ -38,7 +48,7 @@ const goal = 3;
 		</ul>
 		<p>私のスキルは以下の通りです。</p>
 		<ul>
-			{skills.map((skill) => <li>{skill}</li>)}
+			{skills.map((skill) => <li class="skill">{skill}</li>)}
 		</ul>
 		{happy && <p>I am happy to be learning Astro! Astroを学べて幸せです！</p>}
 
