--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,4 +1,6 @@
 ---
+import Navigation from '../components/Navigation.astro';
+import Footer from '../components/Footer.astro';
 import '../styles/global.css';
 
 const pageTitle = "私について";
@@ -25,20 +27,18 @@ const goal = 3;
 		<title>{pageTitle}</title>
 		<style>
 			h1 {
-				color: purple;
+				color: #fdcf47;
 				font-size: 4rem;
 			}
 
 			.skill {
-				color: green;
+				color: #f06066;
 				font-weight: bold;
 			}
 		</style>
 	</head>
 	<body>
-    <a href="/">ホーム</a>
-    <a href="/about">About</a>
-    <a href="/blog">Blog</a>
+    <Navigation />
 		<h1>{pageTitle}</h1>
 		<p>以下は私に関するいくつかの事実です。</p>
 		<ul>
@@ -57,5 +57,6 @@ const goal = 3;
 		{finished && <p>I finished this tutorial! このチュートリアルを終えました！</p>}
 
 		{goal === 3 ? <p>My goal is to finish in 3 days. 3日で終えるのが目標です。</p> : <p>My goal is not 3 days. 3日が目標ではありません。</p>}
+		<Footer />
 	</body>
 </html>
