--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,5 +1,9 @@
 ---
+import Navigation from '../components/Navigation.astro';
+import Footer from '../components/Footer.astro';
+import '../styles/global.css';
 const pageTitle = "ブログ";
+
 ---
 
 <html lang="en">
@@ -11,9 +15,7 @@ const pageTitle = "ブログ";
 		<title>{pageTitle}</title>
 	</head>
 	<body>
-    <a href="/">ホーム</a>
-    <a href="/about">About</a>
-    <a href="/blog">Blog</a>
+    <Navigation />
 		<h1>{pageTitle}</h1>
 		<p>Astroについて学んだことを綴るページである。</p>
 		<ul>
@@ -21,5 +23,6 @@ const pageTitle = "ブログ";
 			<li><a href="/posts/post-2/">記事2</a></li>
 			<li><a href="/posts/post-3/">記事3</a></li>
 		</ul>
+		<Footer />
 	</body>
 </html>
