--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,10 @@
 ---
+import Navigation from '../components/Navigation.astro';
+import Footer from '../components/Footer.astro';
+import '../styles/global.css';
+
 const pageTitle = "Ju5momのAstro学習";
+
 ---
 
 <html lang="en">
@@ -11,14 +16,14 @@ const pageTitle = "Ju5momのAstro学習";
 		<title>{pageTitle}</title>
 	</head>
 	<body>
-		<a href="/">ホーム</a>
-    <a href="/about">About</a>
-		<a href="/blog">Blog</a>
+		<Navigation />
 		<h1>{pageTitle}</h1>
-		<p><a href="https://docs.astro.build/ja/tutorial/2-pages/5/">サイト全体にスタイルを追加する</a>　続きはここから</p>
+		<h2>next</h2>
+		<p><a href="https://docs.astro.build/ja/tutorial/3-components/3/">ヘッダーを作ってみよう</a>　次回はここからスタート！</p>
 		<h2>memo</h2>
 		<ul>
 			<li>Astroのテンプレート構文はJSX構文に似ています。HTMLでスクリプトを使用する方法がわからない場合は、JSXでのやり方を検索するのが良い出発点になるでしょう！</li>
 		</ul>
+		<Footer />
 	</body>
 </html>
