--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,5 +1,5 @@
 ---
-import Navigation from '../components/Navigation.astro';
+import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 import '../styles/global.css';
 
@@ -38,7 +38,7 @@ const goal = 3;
 		</style>
 	</head>
 	<body>
-    <Navigation />
+    <Header />
 		<h1>{pageTitle}</h1>
 		<p>以下は私に関するいくつかの事実です。</p>
 		<ul>
