--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import Navigation from '../components/Navigation.astro';
+import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 import '../styles/global.css';
 
@@ -16,7 +16,7 @@ const pageTitle = "Ju5momのAstro学習";
 		<title>{pageTitle}</title>
 	</head>
 	<body>
-		<Navigation />
+		<Header />
 		<h1>{pageTitle}</h1>
 		<h2>next</h2>
 		<p><a href="https://docs.astro.build/ja/tutorial/3-components/3/">ヘッダーを作ってみよう</a>　次回はここからスタート！</p>
