--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,9 +1,7 @@
 ---
-import Header from '../components/Header.astro';
-import Footer from '../components/Footer.astro';
-import '../styles/global.css';
-
+import BaseLayout from '../layouts/BaseLayout.astro';
 const pageTitle = "私について";
+const headingClass = "about";
 
 const identity = {
   firstName: "サラ",
@@ -18,28 +16,8 @@ const finished = false;
 const goal = 3;
 
 ---
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>{pageTitle}</title>
-		<style>
-			h1 {
-				color: #fdcf47;
-				font-size: 4rem;
-			}
 
-			.skill {
-				color: #f06066;
-				font-weight: bold;
-			}
-		</style>
-	</head>
-	<body>
-    <Header />
-		<h1>{pageTitle}</h1>
+<BaseLayout pageTitle={pageTitle} headingClass={headingClass}>
 		<p>以下は私に関するいくつかの事実です。</p>
 		<ul>
 			<li>私の名前は{identity.firstName}です。</li>
@@ -57,9 +35,4 @@ const goal = 3;
 		{finished && <p>I finished this tutorial! このチュートリアルを終えました！</p>}
 
 		{goal === 3 ? <p>My goal is to finish in 3 days. 3日で終えるのが目標です。</p> : <p>My goal is not 3 days. 3日が目標ではありません。</p>}
-		<Footer />
-		<script>
-			import "../scripts/menu.js";
-		</script>
-	</body>
-</html>
+</BaseLayout>
