カスタムブログlayoutにデータを作成して渡す

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ const pageTitle = "Ju5momのAstro学習";
 
 <BaseLayout pageTitle={pageTitle}>
 	<h2>next</h2>
-		<p><a href="https://docs.astro.build/ja/tutorial/4-layouts/2/" target="_blank">カスタムブログレイアウトにデータを作成して渡す</a>　次回はここからスタート！</p>
+		<p><a href="https://docs.astro.build/ja/tutorial/4-layouts/2/" target="_blank">カスタムブログレイアウトにデータを作成して渡す</a>　次回はpost-2などの他のブログにもレイアウトを移設してみる</p>
 		<h2>memo</h2>
 		<ul>
 			<li>Astroのテンプレート構文はJSX構文に似ています。HTMLでスクリプトを使用する方法がわからない場合は、JSXでのやり方を検索するのが良い出発点になるでしょう！</li>
