Layoutを入れ子にしてみる（Markdownのブログレイアウト）

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ const pageTitle = "Ju5momのAstro学習";
 
 <BaseLayout pageTitle={pageTitle}>
 	<h2>next</h2>
-		<p><a href="https://docs.astro.build/ja/tutorial/4-layouts/3/" target="_blank">レイアウトを組み合わせ、両方の長所を活かす</a>　次回はここから</p>
+		<p><a href="https://docs.astro.build/ja/tutorial/5-astro-api/" target="_blank">ユニット5の導入 - Astro API</a>　次回はここから</p>
 		<h2>memo</h2>
 		<ul>
 			<li>Astroのテンプレート構文はJSX構文に似ています。HTMLでスクリプトを使用する方法がわからない場合は、JSXでのやり方を検索するのが良い出発点になるでしょう！</li>
