--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -1,23 +1,12 @@
 ---
+import BaseLayout from './BaseLayout.astro';
 const { frontmatter } = Astro.props;
-import Footer from '../components/Footer.astro';
-import '../styles/global.css';
 ---
-<html lang="ja">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>{frontmatter.title}</title>
-	</head>
-	<body>
-		<h1>{frontmatter.title}</h1>
-    <p>著者: {frontmatter.author}</p>
-    <p>投稿日: {frontmatter.pubData}</p>
-		<h2>{frontmatter.description}</h2>
-		<ul>{frontmatter.tags.map((tag) => <li>{tag}</li>)}</ul>
-    <slot />
-		<Footer />
-	</body>
-</html>
+<BaseLayout pageTitle={frontmatter.title}>
+	<p>著者: {frontmatter.author}</p>
+	<p>投稿日: {frontmatter.pubData}</p>
+	<h2>{frontmatter.description}</h2>
+	<ul>{frontmatter.tags.map((tag) => <li>{tag}</li>)}</ul>
+	<slot />
+</BaseLayout>
+
