--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,13 +1,13 @@
 ---
 import BaseLayout from '../layouts/BaseLayout.astro';
+import BlogPost from '../components/Blogpost.astro';
+const allPosts = await Astro.glob('../pages/posts/*.md');
 const pageTitle = "ブログ";
 ---
 
 <BaseLayout pageTitle={pageTitle}>
 	<p>Astroについて学んだことを綴るページである。</p>
 		<ul>
-			<li><a href="/posts/post-1/">記事1</a></li>
-			<li><a href="/posts/post-2/">記事2</a></li>
-			<li><a href="/posts/post-3/">記事3</a></li>
+			{allPosts.map(post => <BlogPost url={post.url} title={post.frontmatter.title}></BlogPost>)}
 		</ul>
 </BaseLayout>
