Astro.glob()は非推奨だったので、js + vite 標準機能、ヘルパー関数を使用する方法へ変更

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,5 +19,9 @@ const pageTitle = "Ju5momのAstro学習";
 				これらの命令はすべてビルド時に実行され、サイトの静的HTMLを作成したあと、コードは「捨てられます」。<br>
 				script タグ内の JavaScript はブラウザに送信され、ユーザーの操作に応じてページの更新や入力の切り替えなどを実行します。
 			</li>
+
+			<li>
+				Astroでは、.astro ファイルのフロントマター（---で囲まれた部分）や .js ファイル内で実行されるコードはブラウザ（クライアント）ではなく、ビルド時 or サーバー側（Node.js）で実行されます。
+			</li>
 		</ul>
 </BaseLayout>
