--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,13 +1,15 @@
 ---
 import BaseLayout from '../layouts/BaseLayout.astro';
-import BlogPost from '../components/Blogpost.astro';
-const allPosts = await Astro.glob('../pages/posts/*.md');
+import BlogPost from '../components/BlogPost.astro';
+import { loadPosts } from '../scripts/loadPosts.js'
+const allPosts = await loadPosts();
 const pageTitle = "ブログ";
+console.log(allPosts); // ターミナルに出力される！
 ---
 
 <BaseLayout pageTitle={pageTitle}>
 	<p>Astroについて学んだことを綴るページである。</p>
 		<ul>
-			{allPosts.map(post => <BlogPost url={post.url} title={post.frontmatter.title}></BlogPost>)}
+			{allPosts.map(post => <BlogPost url={post.url} title={post.title}></BlogPost>)}
 		</ul>
 </BaseLayout>
