--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,8 @@ const pageTitle = "Ju5momのAstro学習";
 
 <BaseLayout pageTitle={pageTitle}>
 	<h2>next</h2>
-		<p><a href="https://docs.astro.build/ja/tutorial/5-astro-api/2/" target="_blank">タグページを生成する</a>　次回はまず[tag].astro の裏の仕組みを確認しよう</p>
+		<p><a href="https://docs.astro.build/ja/tutorial/5-astro-api/3/" target="_blank">タグインデックスページを作成する</a>これまでに、各タグの個別ページができたので、それらへのリンクを作成しましょう。
+		</p>
 		<h2>memo</h2>
 		<ul>
 			<li>Astroのテンプレート構文はJSX構文に似ています。HTMLでスクリプトを使用する方法がわからない場合は、JSXでのやり方を検索するのが良い出発点になるでしょう！</li>
