--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -6,7 +6,11 @@ const { frontmatter } = Astro.props;
 	<p>著者: {frontmatter.author}</p>
 	<p>投稿日: {frontmatter.pubData}</p>
 	<h2>{frontmatter.description}</h2>
-	<ul>{frontmatter.tags.map((tag) => <li>{tag}</li>)}</ul>
 	<slot />
+	<div class="tags">
+		{frontmatter.tags?.map((tag: string) => (
+			<p class="tag"><a href={`/tags/${tag}`}>{tag}</a></p>
+		))}
+	</div>
 </BaseLayout>
 
