--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ const pageTitle = "Ju5momのAstro学習";
 
 <BaseLayout pageTitle={pageTitle}>
 	<h2>next</h2>
-		<p><a href="https://docs.astro.build/ja/tutorial/5-astro-api/3/" target="_blank">タグインデックスページを作成する</a>これまでに、各タグの個別ページができたので、それらへのリンクを作成しましょう。
+		<p><a href="https://docs.astro.build/ja/tutorial/5-astro-api/4/" target="_blank">RSSフィードを追加する</a>次回はここから！
 		</p>
 		<h2>memo</h2>
 		<ul>
